Fix margin for blog and news on mobile

--- a/src/stylesheets/components/_blog-posts.scss
+++ b/src/stylesheets/components/_blog-posts.scss
@@ -54,7 +54,7 @@
       max-width: 100%;
       min-width: 100%;;
       margin-bottom: 1.5em;
-      margin-top: 1em;
+      margin: 1em 0em;
     }
   }
 }
